--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -89,4 +89,32 @@
     </android.support.v4.widget.NestedScrollView>
 
     <include layout="@layout/business_bottom"/>
+
+    <Button
+        android:id="@+id/button_call"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="@dimen/public_30dp"
+        android:background="@drawable/login_btn_bg"
+        android:text="开始聊天"
+        android:textColor="@color/white"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/button_addFriend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="@dimen/public_30dp"
+        android:background="@drawable/login_btn_bg"
+        android:text="添加好友"
+        android:textColor="@color/white"
+        android:visibility="gone"/>
 </RelativeLayout>
